--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -1,10 +1,20 @@
-{% extends "bootstrap/base.html" %}
 
-{% block title %}Crm{% endblock %}
+<!DOCTYPE html>
+<html{% block html_attribs %}{% endblock html_attribs %}>
+{%- block html %}
+  <head>
+    {%- block head %}
+    <title>{% block title %}{% endblock title %}</title>
 
-{% block head %}
-{{ super() }}
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    {%- block metas %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {%- endblock metas %}
+
+    {%- block styles %}
+    <!-- Bootstrap -->
+{#    <link href="{{bootstrap_find_resource('css/bootstrap.css', cdn='bootstrap')}}" rel="stylesheet" media="screen">#}
+
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 
 <!--beyond-admin-->
@@ -33,45 +43,92 @@
     <link id="skin-link" href="" rel="stylesheet" type="text/css" />
 
     <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
-    <script src="{{ url_for('static', filename='assets/js/skins.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/skins.js') }}"></script>
 
-{% endblock %}
-
-{% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-{% endblock %}
-
-{% block content %}
-<div class="container">
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-    {% endfor %}
+    {%- endblock styles %}
+    {%- endblock head %}
+  </head>
+  <body{% block body_attribs %}{% endblock body_attribs %}>
+    {% block body -%}
+    {% block navbar %}
+    {%- endblock navbar %}
+    {% block content -%}
+    {%- endblock content %}
 
     {% block page_content %}{% endblock %}
-</div>
-{% endblock %}
 
-{% block scripts %}
-{{ super() }}
-{{ moment.include_moment() }}
-{% endblock %}
+    {% block scripts %}
+{#    <script src="{{bootstrap_find_resource('jquery.js', cdn='jquery')}}"></script>#}
+{#    <script src="{{bootstrap_find_resource('js/bootstrap.js', cdn='bootstrap')}}"></script>#}
+    {%- endblock scripts %}
+    {%- endblock body %}
+  </body>
+{%- endblock html %}
+</html>
+
+
+
+
+
+
+
+{##}
+{##}
+{#{% block title %}Crm{% endblock %}#}
+{##}
+{#{% block head %}#}
+{#{{ super() }}#}
+{#<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">#}
+{#<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">#}
+{##}
+{#<!--beyond-admin-->#}
+{#    <meta name="description" content="alerts" />#}
+{#    <meta name="viewport" content="width=device-width, initial-scale=1.0" />#}
+{#    <meta http-equiv="X-UA-Compatible" content="IE=edge" />#}
+{#    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />#}
+{##}
+{##}
+{#    <!--Basic Styles-->#}
+{##}
+{##}
+{#    <link href="{{ url_for('static', filename='assets/css/bootstrap.min.css') }}" rel="stylesheet" />#}
+{#    <link id="bootstrap-rtl-link" href="" rel="stylesheet" />#}
+{#    <link href="{{ url_for('static', filename='assets/css/font-awesome.min.css') }}" rel="stylesheet" />#}
+{#    <link href="{{ url_for('static', filename='assets/css/weather-icons.min.css') }}" rel="stylesheet" />#}
+{##}
+{#    <!--Fonts-->#}
+{#    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300" rel="stylesheet" type="text/css">#}
+{##}
+{#    <!--Beyond styles-->#}
+{#    <link id="beyond-link" href="{{ url_for('static', filename='assets/css/beyond.min.css') }}" rel="stylesheet" />#}
+{#    <link href="{{ url_for('static', filename='assets/css/demo.min.css" rel="stylesheet') }}" />#}
+{#    <link href="{{ url_for('static', filename='assets/css/typicons.min.css" rel="stylesheet') }}" />#}
+{#    <link href="{{ url_for('static', filename='assets/css/animate.min.css" rel="stylesheet') }}" />#}
+{#    <link id="skin-link" href="" rel="stylesheet" type="text/css" />#}
+{##}
+{#    <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->#}
+{#    <script src="{{ url_for('static', filename='assets/js/skins.js') }}"></script>#}
+{##}
+{#{% endblock %}#}
+{##}
+{#{% block navbar %}#}
+{##}
+{#{% endblock %}#}
+{##}
+{#{% block content %}#}
+{#<div class="container">#}
+{#    {% for message in get_flashed_messages() %}#}
+{#    <div class="alert alert-warning">#}
+{#        <button type="button" class="close" data-dismiss="alert">&times;</button>#}
+{#        {{ message }}#}
+{#    </div>#}
+{#    {% endfor %}#}
+{##}
+{#    {% block page_content %}{% endblock %}#}
+{#</div>#}
+{#{% endblock %}#}
+
+{#{% block scripts %}#}
+{#{{ super() }}#}
+{#{{ moment.include_moment() }}#}
+{#{% endblock %}#}
