--- a/code/app/templates/error-500.html
+++ b/code/app/templates/error-500.html
@@ -45,7 +45,7 @@ Purchase: https://wrapbootstrap.com/theme/beyondadmin-adminapp-angularjs-mvc-WB0
                 <h2>ooops!!</h2>
                 <p class="description">SOMETHING WENT WRONG.</p>
             </div>
-            <a href="index.html" class="return-btn"><i class="fa fa-home"></i>Home</a>
+            <a href="flask.html" class="return-btn"><i class="fa fa-home"></i>Home</a>
         </section>
     </div>
     <!--Basic Scripts-->
