修改模板文件

--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -45,7 +45,9 @@
     <link id="skin-link" href="" rel="stylesheet" type="text/css" />
 
     <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
-    <script src="{{ url_for('static', filename='assets/js/skins.js') }}"></script>
+{#    <script src="{{ url_for('static', filename='assets/js/skins.js') }}"></script>#}
+        <script src="static/assets/js/skins.js"></script>
+
 
 
          <!--Basic Scripts-->
