--- a/code/app/templates/auth/login.html
+++ b/code/app/templates/auth/login.html
@@ -1,4 +1,4 @@
-﻿{% extends "../base.html" %}
+﻿{% extends "base.html" %}
 
 {% block title %}CRM - 登录{% endblock %}
 
@@ -29,13 +29,13 @@
 {#            </div>#}
             <form action="{{ url_for('auth.login') }}" method="post">
                 <div class="loginbox-textbox">
-                    <input type="text" id="username" name="username" class="form-control" placeholder="username" />
+                    <input type="text" id="username" name="username" class="form-control" placeholder="用户名/邮箱" />
                 </div>
                 <div class="loginbox-textbox">
-                    <input type="text" id="password" name="password" class="form-control" placeholder="Password" />
+                    <input type="password" id="password" name="password" class="form-control" placeholder="密码" />
                 </div>
                 <div class="loginbox-forgot">
-                    <a href="">忘记密码?</a>
+                    <a href="{{ url_for('auth.register') }}">忘记密码?</a>
                 </div>
                 <div class="loginbox-submit">
                     <input type="submit" class="btn btn-primary btn-block" value="登录">
