--- a/code/app/templates/error-404.html
+++ b/code/app/templates/error-404.html
@@ -16,7 +16,7 @@
 </br>
                 <p class="description">We Couldn’t Find This Page</p>
             </div>
-            <a href="alert" class="return-btn"><i class="fa fa-home"></i>Home</a>
+            <a href="{{ url_for('auth.login') }}" class="return-btn"><i class="fa fa-home"></i>Home</a>
         </section>
     </div>
     <!--Basic Scripts-->
