--- a/code/app/templates/auth/register2.html
+++ b/code/app/templates/auth/register2.html
@@ -1,4 +1,4 @@
-﻿{% extends "base.html" %}
+﻿{% extends "crm_base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}CRM - 注册{% endblock %}
