修改基础模板

--- a/code/app/templates/error-404.html
+++ b/code/app/templates/error-404.html
@@ -1,10 +1,13 @@
-﻿{% extends "crm_base.html" %}
+﻿{% extends "base_index.html" %}
 
 {% block title %}Flasky - Page Not Found{% endblock %}
 
 {% block body_attribs %} class="body-404" {% endblock body_attribs %}
 
-{% block page_content %}
+{% block navbar %}
+{% endblock  %}
+
+{% block content %}
 
     <div class="error-header"> </div>
     <div class="container ">
