--- a/code/app/templates/error-500.html
+++ b/code/app/templates/error-500.html
@@ -1,9 +1,5 @@
 ﻿<!DOCTYPE html>
-<!--
-BeyondAdmin - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.6
-Version: 1.5.0
-Purchase: https://wrapbootstrap.com/theme/beyondadmin-adminapp-angularjs-mvc-WB06R48S4
--->
+
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!--Head-->
@@ -42,7 +38,7 @@ Purchase: https://wrapbootstrap.com/theme/beyondadmin-adminapp-angularjs-mvc-WB0
         <section class="error-container text-center">
             <h1>500</h1>
             <div class="error-divider">
-                <h2>ooops!!</h2>
+                <h2>出错了，500</h2>
                 <p class="description">SOMETHING WENT WRONG.</p>
             </div>
             <a href="flask.html" class="return-btn"><i class="fa fa-home"></i>Home</a>
