--- a/code/app/templates/auth/register.html
+++ b/code/app/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends "crm_base.html" %}
+{% extends "base_index.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Flasky - Register{% endblock %}
