--- a/code/app/templates/base_index.html
+++ b/code/app/templates/base_index.html
@@ -44,13 +44,13 @@
 
     <!--Beyond styles-->
     <link id="beyond-link" href="{{ url_for('static', filename='assets/css/beyond.min.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='assets/css/demo.min.css" rel="stylesheet') }}" />
-    <link href="{{ url_for('static', filename='assets/css/typicons.min.css" rel="stylesheet') }}" />
-    <link href="{{ url_for('static', filename='assets/css/animate.min.css" rel="stylesheet') }}" />
+    <link href="{{ url_for('static', filename='assets/css/demo.min.css') }}"  rel="stylesheet" />
+    <link href="{{ url_for('static', filename='assets/css/typicons.min.css')}}"  rel="stylesheet" />
+    <link href="{{ url_for('static', filename='assets/css/animate.min.css') }}" rel="stylesheet' />
     <link id="skin-link" href="" rel="stylesheet" type="text/css" />
 
     <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
-    <script src="static/assets/js/skins.js"></script>
+    <script src="/static/assets/js/skins.js"></script>
 
 
 
@@ -60,16 +60,10 @@
   <body{% block body_attribs %}{% endblock body_attribs %}>
     {% block body -%}
 
-{#     {% block loader %}#}
-{#    <!-- Loading Container -->#}
-{#    <div class="loading-container">#}
-{#        <div class="loader"></div>#}
-{#    </div>#}
-{#    <!--  /Loading Container -->#}
-{#    {%- endblock loader %}#}
+
 
     {% block navbar %}
-        <!-- Navbar -->
+    <!-- Navbar -->
     <div class="navbar">
         <div class="navbar-inner">
             <div class="navbar-container">
@@ -398,21 +392,20 @@
         </div>
     </div>
     <!-- /Navbar -->
-
-
     {%- endblock navbar %}
 
 
 
 
-
-    {% block content -%}
-          <!-- Main Container -->
+<!-- Main Container -->
     <div class="main-container container-fluid">
+    {% block maincontainer -%}
+
         <!-- Page Container -->
         <div class="page-container">
+         {% block pagecontainer %}
 
-             {% block leftmenu %}
+             {% block pagesidebar %}
                 <!-- Page Sidebar -->
                 <div class="page-sidebar" id="sidebar">
                         <!-- Page Sidebar Header-->
@@ -853,7 +846,7 @@
                         <!-- /Sidebar Menu -->
                     </div>
                 <!-- /Page Sidebar -->
-            {% endblock leftmenu %}
+            {% endblock pagesidebar %}
 
             {% block chat %}
             <!-- Chat Bar -->
@@ -1094,19 +1087,19 @@
             <!-- /Chat Bar -->
             {% endblock chat %}
 
-             {% block page_content %}
+             {% block pagecontent %}
+
+             {% endblock pagecontent %}
 
 
 
-             {% endblock page_content %}
-
+         {% endblock pagecontainer %}
         </div>
         <!-- /Page Container -->
-        <!-- Main Container -->
 
+    {%- endblock maincontainer %}
+    <!-- Main Container -->
     </div>
-    {%- endblock content %}
-
 
 
     {% block scripts %}
