--- a/code/app/templates/auth/login.html
+++ b/code/app/templates/auth/login.html
@@ -2,10 +2,9 @@
 
 {% block title %}CRM - 登录{% endblock %}
 
- {% block navbar %}
- {% endblock navbar %}
 
-{% block content %}
+
+{% block body %}
 
 <div class="login-container animated fadeInDown">
         <div class="loginbox bg-white">
