--- a/code/app/templates/auth/register2.html
+++ b/code/app/templates/auth/register2.html
@@ -1,11 +1,11 @@
-﻿{% extends "crm_base.html" %}
+﻿{% extends "base_index.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}CRM - 注册{% endblock %}
 
 
 
-{% block page_content %}
+{% block body %}
 
 
 
