--- a/code/app/templates/base_index.html
+++ b/code/app/templates/base_index.html
@@ -26,6 +26,7 @@
 
 
 
+
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 
@@ -50,7 +51,7 @@
     <link id="skin-link" href="" rel="stylesheet" type="text/css" />
 
     <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
-    <script src="/static/assets/js/skins.js"></script>
+    <script src="{{ url_for('static', filename='assets/js/skins.js') }} "></script>
 
 
 
@@ -176,7 +177,7 @@
                                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-messages">
                                     <li>
                                         <a href="#">
-                                            <img src="static/assets/img/avatars/divyia.jpg" class="message-avatar" alt="Divyia Austin">
+                                            <img src="/static/assets/img/avatars/divyia.jpg" class="message-avatar" alt="Divyia Austin">
                                             <div class="message">
                                                 <span class="message-sender">
                                                     Divyia Austin
@@ -195,7 +196,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <img src="static/assets/img/avatars/bing.png" class="message-avatar" alt="Microsoft Bing">
+                                            <img src="/static/assets/img/avatars/bing.png" class="message-avatar" alt="Microsoft Bing">
                                             <div class="message">
                                                 <span class="message-sender">
                                                     Bing.com
@@ -214,7 +215,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <img src="static/assets/img/avatars/adam-jansen.jpg" class="message-avatar" alt="Divyia Austin">
+                                            <img src="/static/assets/img/avatars/adam-jansen.jpg" class="message-avatar" alt="Divyia Austin">
                                             <div class="message">
                                                 <span class="message-sender">
                                                     Nicolas
@@ -310,7 +311,7 @@
                             <li>
                                 <a class="login-area dropdown-toggle" data-toggle="dropdown">
                                     <div class="avatar" title="View your public profile">
-                                        <img src="static/assets/img/avatars/adam-jansen.jpg">
+                                        <img src="/static/assets/img/avatars/adam-jansen.jpg">
                                     </div>
                                     <section>
                                         <h2><span class="profile"><span>David Stevenson</span></span></h2>
@@ -323,7 +324,7 @@
                                     <!--Avatar Area-->
                                     <li>
                                         <div class="avatar-area">
-                                            <img src="static/assets/img/avatars/adam-jansen.jpg" class="avatar">
+                                            <img src="/static/assets/img/avatars/adam-jansen.jpg" class="avatar">
                                             <span class="caption">Change Photo</span>
                                         </div>
                                     </li>
@@ -335,18 +336,18 @@
                                     <!--Theme Selector Area-->
                                     <li class="theme-area">
                                         <ul class="colorpicker" id="skin-changer">
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#5DB2FF;" rel="static/assets/css/skins/blue.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#2dc3e8;" rel="static/assets/css/skins/azure.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#03B3B2;" rel="static/assets/css/skins/teal.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#53a93f;" rel="static/assets/css/skins/green.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#FF8F32;" rel="static/assets/css/skins/orange.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#cc324b;" rel="static/assets/css/skins/pink.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#AC193D;" rel="static/assets/css/skins/darkred.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#8C0095;" rel="static/assets/css/skins/purple.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#0072C6;" rel="static/assets/css/skins/darkblue.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#585858;" rel="static/assets/css/skins/gray.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#474544;" rel="static/assets/css/skins/black.min.css"></a></li>
-                                            <li><a class="colorpick-btn" href="#" style="background-color:#001940;" rel="static/assets/css/skins/deepblue.min.css"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#5DB2FF;" rel="{{ url_for('static', filename='assets/css/skins/blue.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#2dc3e8;" rel="{{ url_for('static', filename='assets/css/skins/azure.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#03B3B2;" rel="{{ url_for('static', filename='assets/css/skins/teal.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#53a93f;" rel="{{ url_for('static', filename='assets/css/skins/green.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#FF8F32;" rel="{{ url_for('static', filename='assets/css/skins/orange.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#cc324b;" rel="{{ url_for('static', filename='assets/css/skins/pink.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#AC193D;" rel="{{ url_for('static', filename='assets/css/skins/darkred.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#8C0095;" rel="{{ url_for('static', filename='assets/css/skins/purple.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#0072C6;" rel="{{ url_for('static', filename='assets/css/skins/darkblue.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#585858;" rel="{{ url_for('static', filename='assets/css/skins/gray.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#474544;" rel="{{ url_for('static', filename='assets/css/skins/black.min.css') }}"></a></li>
+                                            <li><a class="colorpick-btn" href="#" style="background-color:#001940;" rel="{{ url_for('static', filename='assets/css/skins/deepblue.min.css') }}"></a></li>
                                         </ul>
                                     </li>
                                     <!--/Theme Selector Area-->
@@ -860,7 +861,7 @@
                     <ul class="contacts-list">
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/divyia.jpg" />
+                                <img src="/static/assets/img/avatars/divyia.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Divyia Philips</div>
@@ -875,7 +876,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/Nicolai-Larson.jpg" />
+                                <img src="/static/assets/img/avatars/Nicolai-Larson.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Adam Johnson</div>
@@ -890,7 +891,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/John-Smith.jpg" />
+                                <img src="/static/assets/img/avatars/John-Smith.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">John Smith</div>
@@ -905,7 +906,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/Osvaldus-Valutis.jpg" />
+                                <img src="/static/assets/img/avatars/Osvaldus-Valutis.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Osvaldus Valutis</div>
@@ -920,7 +921,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/Javi-Jimenez.jpg" />
+                                <img src="/static/assets/img/avatars/Javi-Jimenez.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Javi Jimenez</div>
@@ -935,7 +936,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/Stephanie-Walter.jpg" />
+                                <img src="/static/assets/img/avatars/Stephanie-Walter.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Stephanie Walter</div>
@@ -950,7 +951,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/Sergey-Azovskiy.jpg" />
+                                <img src="/static/assets/img/avatars/Sergey-Azovskiy.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Sergey Azovskiy</div>
@@ -965,7 +966,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/Lee-Munroe.jpg" />
+                                <img src="/static/assets/img/avatars/Lee-Munroe.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Lee Munroe</div>
@@ -980,7 +981,7 @@
                         </li>
                         <li class="contact">
                             <div class="contact-avatar">
-                                <img src="static/assets/img/avatars/divyia.jpg" />
+                                <img src="/static/assets/img/avatars/divyia.jpg" />
                             </div>
                             <div class="contact-info">
                                 <div class="contact-name">Divyia Philips</div>
@@ -998,7 +999,7 @@
                 <div class="chatbar-messages" style="display: none;">
                     <div class="messages-contact">
                         <div class="contact-avatar">
-                            <img src="static/assets/img/avatars/divyia.jpg" />
+                            <img src="/static/assets/img/avatars/divyia.jpg" />
                         </div>
                         <div class="contact-info">
                             <div class="contact-name">Divyia Philips</div>
@@ -1103,17 +1104,34 @@
 
 
     {% block scripts %}
-        {{ super() }}
 
 
-
-    <script src="{{ url_for('static', filename='assets/js/slimscroll/jquery.slimscroll.min.js') }}"></script>
+    <!--Basic Scripts-->
+    <script src="/static/assets/js/jquery.min.js"></script>
+    <script src="/static/assets/js/bootstrap.min.js"></script>
+    <script src="/static/assets/js/slimscroll/jquery.slimscroll.min.js"></script>
 
     <!--Beyond Scripts-->
-    <script src="{{ url_for('static', filename='assets/js/beyond.min.js') }}"></script>
+    <script src="/static/assets/js/beyond.js"></script>
+
 
     <!--Page Related Scripts-->
-    <script src="{{ url_for('static', filename='assets/js/toastr/toastr.js') }}"></script>
+    <!--Sparkline Charts Needed Scripts-->
+    <script src="/static/assets/js/charts/sparkline/jquery.sparkline.js"></script>
+    <script src="/static/assets/js/charts/sparkline/sparkline-init.js"></script>
+
+    <!--Easy Pie Charts Needed Scripts-->
+    <script src="/static/assets/js/charts/easypiechart/jquery.easypiechart.js"></script>
+    <script src="/static/assets/js/charts/easypiechart/easypiechart-init.js"></script>
+
+    <!--Flot Charts Needed Scripts-->
+    <script src="/static/assets/js/charts/flot/jquery.flot.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.resize.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.pie.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.tooltip.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.orderBars.js"></script>
+
+
 
 
     {%- endblock scripts %}
