--- a/code/app/static/assets/css/main.css
+++ b/code/app/static/assets/css/main.css
@@ -13,3 +13,13 @@
     top: 0%;
     margin-top: -8px;
 }
+
+.page-body {
+
+    /*background: #eee;*/
+    /*padding-top: 10px;*/
+    /*padding-right: 5px;*/
+    /*padding-bottom: 10px;*/
+    /*padding-left: 10px;*/
+
+}
