--- a/code/app/templates/main/index.html
+++ b/code/app/templates/main/index.html
@@ -855,6 +855,14 @@
      {{ super() }}
 
 
+    <!--Flot Charts Needed Scripts-->
+    <script src="/static/assets/js/charts/flot/jquery.flot.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.resize.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.pie.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.tooltip.js"></script>
+    <script src="/static/assets/js/charts/flot/jquery.flot.orderBars.js"></script>
+
+
 
 
     <script>
