修改首页样式

--- a/code/app/templates/base_index.html
+++ b/code/app/templates/base_index.html
@@ -1136,8 +1136,10 @@
 
                  {% endblock pageheader %}
 
+                 <div class="page-body" >
                   {% block pagebody %}
                  {% endblock pagebody %}
+                 </div>
 
 
 
