--- a/code/app/templates/app/user/users.html
+++ b/code/app/templates/app/user/users.html
@@ -4,117 +4,193 @@
 
 {% block pagebody %}
 
-<div class="page-body">
-
-    <div class="row">
-                            <div class="col-xs-12 col-md-12">
 
 
-    <table id="dg" title="My Users" class="easyui-datagrid" style="height:250px"
-            url="{{ url_for('api.get_user_list',id=1) }}"
-            toolbar="#toolbar" pagination="true"
-            rownumbers="true" fitColumns="true" singleSelect="true">
-        <thead>
-            <tr>
-                <th field="id" width="50">First Name</th>
-                <th field="username" width="50">Last Name</th>
-                <th field="phone" width="50">Phone</th>
-                <th field="email" width="50">Email <a href="#" class="btn btn-default btn-xs purple"><i class="fa fa-edit"></i> Edit</a></th>
-            </tr>
-        </thead>
-    </table>
-    <div id="toolbar">
-        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="newUser()">New User</a>
-        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editUser()">Edit User</a>
-        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="destroyUser()">Remove User</a>
-    </div>
+<div class="row">
 
-    <div id="dlg" class="easyui-dialog" style="width:400px"
-            closed="true" buttons="#dlg-buttons">
-        <form id="fm" method="post" novalidate style="margin:0;padding:20px 50px">
-            <div style="margin-bottom:20px;font-size:14px;border-bottom:1px solid #ccc">User Information</div>
-            <div style="margin-bottom:10px">
-                <input name="id" class="easyui-textbox" required="true" label="First Name:" style="width:100%">
-            </div>
-            <div style="margin-bottom:10px">
-                <input name="username" class="easyui-textbox" required="true" label="Last Name:" style="width:100%">
-            </div>
-            <div style="margin-bottom:10px">
-                <input name="phone" class="easyui-textbox" required="true" label="Phone:" style="width:100%">
-            </div>
-            <div style="margin-bottom:10px">
-                <input name="email" class="easyui-textbox" required="true" validType="email" label="Email:" style="width:100%">
-            </div>
-        </form>
-    </div>
-    <div id="dlg-buttons">
-        <a href="javascript:void(0)" class="easyui-linkbutton c6" iconCls="icon-ok" onclick="saveUser()" style="width:90px">Save</a>
-        <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:$('#dlg').dialog('close')" style="width:90px">Cancel</a>
-    </div>
-    <script type="text/javascript">
-        var url;
-        function newUser(){
-            $('#dlg').dialog('open').dialog('center').dialog('setTitle','New User');
-            $('#fm').form('clear');
-            url = 'save_user.php';
-        }
-        function editUser(){
-            var row = $('#dg').datagrid('getSelected');
-            if (row){
-                $('#dlg').dialog('open').dialog('center').dialog('setTitle','Edit User');
-                $('#fm').form('load',row);
-                url = 'update_user.php?id='+row.id;
-            }
-        }
-        function saveUser(){
-            $('#fm').form('submit',{
-                url: url,
-                onSubmit: function(){
-                    return $(this).form('validate');
-                },
-                success: function(result){
-                    var result = eval('('+result+')');
-                    if (result.errorMsg){
-                        $.messager.show({
-                            title: 'Error',
-                            msg: result.errorMsg
-                        });
-                    } else {
-                        $('#dlg').dialog('close');        // close the dialog
-                        $('#dg').datagrid('reload');    // reload the user data
-                    }
-                }
-            });
-        }
-        function destroyUser(){
-            var row = $('#dg').datagrid('getSelected');
-            if (row){
-                $.messager.confirm('Confirm','Are you sure you want to destroy this user?',function(r){
-                    if (r){
-                        $.post('destroy_user.php',{id:row.id},function(result){
-                            if (result.success){
-                                $('#dg').datagrid('reload');    // reload the user data
-                            } else {
-                                $.messager.show({    // show error message
-                                    title: 'Error',
-                                    msg: result.errorMsg
-                                });
-                            }
-                        },'json');
-                    }
-                });
-            }
-        }
-    </script>
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 
-
+<div class="widget">
+                                <div class="widget-header bordered-bottom bordered-themeprimary">
+                                    <i class="widget-icon fa fa-tasks themeprimary"></i>
+                                    <span class="widget-caption themeprimary">Task Board</span>
+                                </div><!--Widget Header-->
+                                <div class="widget-body no-padding">
+                                    <div class="task-container">
+                                        <div class="task-search">
+                                            <span class="input-icon">
+                                                <input type="text" class="form-control" placeholder="Search Tasks">
+                                                <i class="fa fa-search gray"></i>
+                                            </span>
+                                        </div>
+                                        <ul class="tasks-list">
+                                            <li class="task-item">
+                                                <div class="task-check">
+                                                    <label>
+                                                        <input type="checkbox">
+                                                        <span class="text"></span>
+                                                    </label>
+                                                </div>
+                                                <div class="task-state">
+                                                    <span class="label label-yellow">
+                                                        In Progress
+                                                    </span>
+                                                </div>
+                                                <div class="task-time">1 hour ago</div>
+                                                <div class="task-body">Ask to the sysadmins to install Python 3 on the server and run it</div>
+                                                <div class="task-creator"><a href="">Cameron Hetfield</a></div>
+                                                <div class="task-assignedto">assigned to you</div>
+                                            </li>
+                                            <li class="task-item">
+                                                <div class="task-check">
+                                                    <label>
+                                                        <input type="checkbox">
+                                                        <span class="text"></span>
+                                                    </label>
+                                                </div>
+                                                <div class="task-state">
+                                                    <span class="label label-orange">
+                                                        Active
+                                                    </span>
+                                                </div>
+                                                <div class="task-time">2 hours ago</div>
+                                                <div class="task-body">Write documentation for the new API with test and deploy specifications</div>
+                                                <div class="task-creator"><a href="">Behrang Nitsche</a></div>
+                                                <div class="task-assignedto">assigned to you</div>
+                                            </li>
+                                            <li class="task-item">
+                                                <div class="task-check">
+                                                    <label>
+                                                        <input type="checkbox">
+                                                        <span class="text"></span>
+                                                    </label>
+                                                </div>
+                                                <div class="task-state">
+                                                    <span class="label label-palegreen">
+                                                        Approved
+                                                    </span>
+                                                </div>
+                                                <div class="task-time">yesterday</div>
+                                                <div class="task-body">Code refactoring and rewriting silly codes and test it</div>
+                                                <div class="task-creator"><a href="">David Fincher</a></div>
+                                                <div class="task-assignedto">assigned to Kim</div>
+                                            </li>
+                                        </ul>
+                                        <table id="dg" title="My Users" class="easyui-datagrid" style="height:250px"
+                                                url="{{ url_for('api.get_user_list',id=1) }}"
+                                                toolbar="#toolbar" pagination="true"
+                                                rownumbers="true" fitColumns="true" singleSelect="true">
+                                            <thead>
+                                                <tr>
+                                                    <th field="id" width="50">First Name</th>
+                                                    <th field="username" width="50">Last Name</th>
+                                                    <th field="phone" width="50">Phone</th>
+                                                    <th field="email" width="50">Email <a href="#" class="btn btn-default btn-xs purple"><i class="fa fa-edit"></i> Edit</a></th>
+                                                </tr>
+                                            </thead>
+                                        </table>
+                                    </div>
+                                </div><!--Widget Body-->
                             </div>
 
 
 
-    </div>
 
 </div>
+
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+
+<div class="widget">
+                                <div class="widget-header bordered-bottom bordered-themeprimary">
+                                    <i class="widget-icon fa fa-tasks themeprimary"></i>
+                                    <span class="widget-caption themeprimary">Task Board</span>
+                                </div><!--Widget Header-->
+                                <div class="widget-body no-padding">
+                                    <div class="task-container">
+                                        <div class="task-search">
+                                            <span class="input-icon">
+                                                <input type="text" class="form-control" placeholder="Search Tasks">
+                                                <i class="fa fa-search gray"></i>
+                                            </span>
+                                        </div>
+                                        <ul class="tasks-list">
+                                            <li class="task-item">
+                                                <div class="task-check">
+                                                    <label>
+                                                        <input type="checkbox">
+                                                        <span class="text"></span>
+                                                    </label>
+                                                </div>
+                                                <div class="task-state">
+                                                    <span class="label label-yellow">
+                                                        In Progress
+                                                    </span>
+                                                </div>
+                                                <div class="task-time">1 hour ago</div>
+                                                <div class="task-body">Ask to the sysadmins to install Python 3 on the server and run it</div>
+                                                <div class="task-creator"><a href="">Cameron Hetfield</a></div>
+                                                <div class="task-assignedto">assigned to you</div>
+                                            </li>
+                                            <li class="task-item">
+                                                <div class="task-check">
+                                                    <label>
+                                                        <input type="checkbox">
+                                                        <span class="text"></span>
+                                                    </label>
+                                                </div>
+                                                <div class="task-state">
+                                                    <span class="label label-orange">
+                                                        Active
+                                                    </span>
+                                                </div>
+                                                <div class="task-time">2 hours ago</div>
+                                                <div class="task-body">Write documentation for the new API with test and deploy specifications</div>
+                                                <div class="task-creator"><a href="">Behrang Nitsche</a></div>
+                                                <div class="task-assignedto">assigned to you</div>
+                                            </li>
+                                            <li class="task-item">
+                                                <div class="task-check">
+                                                    <label>
+                                                        <input type="checkbox">
+                                                        <span class="text"></span>
+                                                    </label>
+                                                </div>
+                                                <div class="task-state">
+                                                    <span class="label label-palegreen">
+                                                        Approved
+                                                    </span>
+                                                </div>
+                                                <div class="task-time">yesterday</div>
+                                                <div class="task-body">Code refactoring and rewriting silly codes and test it</div>
+                                                <div class="task-creator"><a href="">David Fincher</a></div>
+                                                <div class="task-assignedto">assigned to Kim</div>
+                                            </li>
+                                        </ul>
+                                        <table id="dg" title="My Users" class="easyui-datagrid" style="height:250px"
+                                                url="{{ url_for('api.get_user_list',id=1) }}"
+                                                toolbar="#toolbar" pagination="true"
+                                                rownumbers="true" fitColumns="true" singleSelect="true">
+                                            <thead>
+                                                <tr>
+                                                    <th field="id" width="50">First Name</th>
+                                                    <th field="username" width="50">Last Name</th>
+                                                    <th field="phone" width="50">Phone</th>
+                                                    <th field="email" width="50">Email <a href="#" class="btn btn-default btn-xs purple"><i class="fa fa-edit"></i> Edit</a></th>
+                                                </tr>
+                                            </thead>
+                                        </table>
+                                    </div>
+                                </div><!--Widget Body-->
+                            </div>
+
+
+
+
+</div>
+</div>
+
+
+
 
 
 {% endblock pagebody %}
